css change of z-index for alerts, fixing bugs in backbone stuff

--- a/pytutor/static/css/main.css
+++ b/pytutor/static/css/main.css
@@ -111,6 +111,12 @@ div.label
   align-items: center;
 }
 
+#messages .alert
+{
+    z-index: 10000;
+    position: absolute;
+}
+
 
 .tab-pane.panel
 {
